databases/mongoexpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: esb
spec:
  selector:
    app: mongo-express
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
